# raindrop-client

./: .env.example  .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  pyproject.toml  skill.md
memory/: 2026-03-09.md
src/raindrop_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  http.py
src/raindrop_client/models/: __init__.py  backup.py  collection.py  common.py  filter.py  highlight.py  raindrop.py  sharing.py  tag.py  user.py
src/raindrop_client/resources/: __init__.py  backups.py  collections.py  filters.py  highlights.py  import_export.py  raindrops.py  sharing.py  tags.py  user.py
tests/: conftest.py  test_auth.py  test_client.py  test_http.py
tests/test_models/: test_backup.py  test_collection.py  test_common.py  test_filter.py  test_highlight.py  test_raindrop.py  test_sharing.py  test_tag.py  test_user.py
tests/test_resources/: test_backups.py  test_collections.py  test_filters.py  test_highlights.py  test_import_export.py  test_raindrops.py  test_sharing.py  test_tags.py  test_user.py
